center content vertical and fixed text align errors

--- a/css/sass/mainstructure.scss
+++ b/css/sass/mainstructure.scss
@@ -2,16 +2,33 @@ body {
 	background: #65B8E0;
 	text-rendering: optimizeLegibility
 }
+body,html,div.containter  {
+	height: 100%;
+}
 
 div.containter {
-	max-width: 384px;
-	margin: 0 auto;
-	width: 100%;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-moz-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+  
 }
 
 article {
 	padding: 1em 3.5%;
-	width: 92%;
+	max-width: 400px  
+
 }
 
 section {
@@ -191,7 +208,7 @@ ul.sun {
 		margin: .3em 3% .3em 3%
 	}
 
-	li:nth-of-type(2) {
+	li:nth-of-type(2n) {
 		text-align: left;
 		margin: .3em 0;
 	}
